# event-pusher

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
scripts/: event_pusher_mcp.py  setup_google_auth.py
src/event_pusher/: calendar_client.py  handler.py  validator.py
tests/unit/: test_handler.py  test_validator.py
